Added FIlter sidebar

--- a/Angkring/sytle.css
+++ b/Angkring/sytle.css
@@ -105,7 +105,8 @@ body, html, .bg {
 }
 
 .modal-content {
-    background-color: rgb(255, 255, 255,0.2);
+    background-color: red;
+    rgb(255, 255, 255,0.2);
 }   
 
 .modal-title{
