--- a/Angkring/style-user-page.css
+++ b/Angkring/style-user-page.css
@@ -18,6 +18,10 @@ html, body {
   background:#000;
 }
 
+.yesus{
+  top: 6rem;
+}
+
 .hori-scroll > .row { 
   overflow-x: auto; 
   white-space: nowrap; 
@@ -55,8 +59,10 @@ html, body {
 .card-cat.hover {
   -webkit-transition: all 0.15s;
   transition: all 0.15s;
+  transform:scale(1.02);
   
-	transform:scale(1.02);
+  box-shadow: 1px 8px 20px grey;
+    -webkit-transition:  box-shadow 0.15 s ease-in;
 }
 
 
@@ -78,6 +84,53 @@ html, body {
   background-color: rgba(255,255,255,0.4);
   padding-bottom: -10rem;
 }
+
+.modal-dialog{
+  
+}
+
+.modal-content {
+  background-color: transparent;
+  rgb(255, 255, 255,0.2);
+}   
+
+.modal-title{
+  /* margin-left: 210px; */
+  justify-content: center;
+  font-size: 20pt;
+  
+
+}
+
+.modal-header {
+  padding:9px 15px;
+  /* border-bottom:1px solid #eee; */
+  background-color: rgb(189, 235, 159);
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+   border-top-left-radius: 5px;
+   border-top-right-radius: 5px;
+}
+
+.modal-body {
+  padding:9px 15px;
+  border-bottom:1px solid #eee;
+  background-color: rgb(255, 255, 255,0.8);
+
+   border-top-left-radius: 1px;
+   border-top-right-radius: 1px;
+}
+
+.modal-footer{
+  background-color: rgb(255, 255, 255,0.8);
+   border-top-color: teal;
+  border-bottom-left-radius: 1px;
+   border-bottom-right-radius: 1px;
+}
+
+
 /* .carousel-control-prev-icon,
 .carousel-control-next-icon {
   height: 100%;
