--- a/Angkring/style-allmenu.css
+++ b/Angkring/style-allmenu.css
@@ -1,3 +1,149 @@
 .body{
     overflow-x:hidden;
+    background-image: url('Image/bg-food.png');
 }
+
+
+
+.talkbubble {
+    width: 11rem;
+    height: 3rem;
+    background:rgba(156, 238, 101,0.5);
+    position: relative;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+  }
+  .talkbubble:before {
+    content: "";
+    position: absolute;
+    right: 100%;
+    top: 0.7rem;
+    width: 0;
+    height: 0;
+    border-top: 13px solid transparent;
+    border-right: 26px solid rgba(156, 238, 101,0.5);
+    border-bottom: 13px solid transparent;
+  }
+
+  .filter-oke{
+    top: 6.2rem;
+  }
+
+  .green-bg{
+    background-image: url('Image/footer green.jpg');
+  }
+
+  .yess{
+    background-color:rgb(238, 255, 227);
+  }
+
+  .card-cat .img{
+    background-color: black;
+  }
+  
+  .card-cat:hover,
+  .card-cat.hover {
+    -webkit-transition: all 0.15s;
+    transition: all 0.15s;
+    transform:scale(1.02);
+    
+    box-shadow: 1px 8px 20px grey;
+      -webkit-transition:  box-shadow 0.15 s ease-in;
+  }
+
+  .modal{
+    border-color: transparent;
+  }
+  
+  .modal-content {
+    background-color: transparent;
+    width: 34rem;
+    left: 50%;
+    margin-left: -17rem;
+    /* rgb(255, 255, 255,0.2); */
+  }   
+  
+  .modal-title{
+    /* margin-left: 210px; */
+    
+    font-size: 20pt;
+    
+  
+  }
+  
+  .modal-header {
+    padding:9px 15px;
+    width: 34rem;
+    position: relative;
+    left: 50%; 
+    margin-left: -17rem;
+    /* border-bottom:1px solid #eee; */
+    background-color: rgb(192, 240, 158);
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+     border-top-left-radius: 5px;
+     border-top-right-radius: 5px;
+  }
+  
+  .modal-body {
+    padding:9px 15px;
+    border-bottom:1px solid #eee;
+    background-color: rgb(255, 255, 255,0.95);
+    width: 34rem;
+    left: 50%; margin-left: -17rem; 
+     border-top-left-radius: 1px;
+     border-top-right-radius: 1px;
+  }
+  .bottom-border { border-bottom: 1px dashed black; }
+  
+  .modal-footer{
+    background-color: rgb(255, 255, 255,0.8);
+     border-top-color: teal;
+     width: 34rem;
+     position: relative;
+     left: 50%; margin-left: -17rem;
+    border-bottom-left-radius: 1px;
+     border-bottom-right-radius: 1px;
+  }
+
+  .greet-text{
+    position: relative;
+    display: block;
+    width: 20rem;
+    margin-left: -10rem;        
+    line-height: 20px;
+    text-align: center;
+    font-size: 20pt;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    transition: ease all 0.3s;
+    position: fixed;
+    top: 1%;
+    left: 50%;
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+    z-index: 9999999;
+  }
+
+  .fabtn{
+
+
+    position: relative;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    display: block;        
+    line-height: 20px;
+    text-align: left;
+    font-size: 20pt;
+    font-weight: bold;
+    text-decoration: none;
+    transition: ease all 0.3s;
+    position: fixed;
+    left: 1%;
+    bottom:12%;
+  }
+.fabtn:hover{background: #26a74a}
