--- a/Angkring/style-checkout.css
+++ b/Angkring/style-checkout.css
@@ -19,68 +19,6 @@ html, body {
   background:#000;
 }
 
-.sidenav {
-  height: 75%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1234902; /* Stay on top */
-  top: 10%; /* Stay at the top */
-  right: 0;
-  background-color: rgb(177, 240, 158);
-   /* rgba(255,255,255,0.98);  */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 1rem; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
-
-.sidenav img{
-  object-fit: cover;
-  height: 7.17rem;
-  width: 7rem;
-}
-
-/* The navigation menu links */
-/* .sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-} */
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-.sidenav .checkbtn {
-  position: absolute;
-  top: 100%;
-  right: 25px;
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left .5s;
-  padding: 20px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
 .filter-oke{
   top: 6.2rem;
 }
@@ -208,11 +146,11 @@ html, body {
   width: 34rem;
   left: 50%;
   margin-left: -17rem;
-  
+  /* rgb(255, 255, 255,0.2); */
 }   
 
 .modal-title{
- 
+  /* margin-left: 210px; */
   
   font-size: 20pt;
   
@@ -225,7 +163,7 @@ html, body {
   position: relative;
   left: 50%; 
   margin-left: -17rem;
-
+  /* border-bottom:1px solid #eee; */
   background-color: rgb(192, 240, 158);
   -webkit-border-top-left-radius: 5px;
   -webkit-border-top-right-radius: 5px;
@@ -254,11 +192,11 @@ html, body {
    left: 50%; margin-left: -17rem;
   border-bottom-left-radius: 1px;
    border-bottom-right-radius: 1px;
-} */
+}
 
 .greet-text{
   position: relative;
-  
+  display: block;
   width: 20rem;
   margin-left: -10rem;        
   line-height: 20px;
@@ -266,57 +204,17 @@ html, body {
   font-size: 20pt;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-decoration: none;
-  transition: ease all 1.3s;
+  transition: ease all 0.3s;
   position: fixed;
-  top:20%;
+  top: 1%;
   left: 50%;
   -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s;
-  /* z-index: 99999; */
+  z-index: 9999999;
 }
 
-.fabtn2{
-  position: relative;
-  width: 20rem;
-  margin-left: -10rem;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  display: block;        
-  line-height: 20px;
-  text-align: center;
-  font-size: 20pt;
-  font-weight: bold;
-  text-decoration: none;
-  transition: ease all 0.3s;
-  position: fixed;
-  top: 2%;
-  left:50%;
-  -webkit-animation-delay: 0.3s;
-  animation-delay: 0.3s;
-}
-.fabtn{
-
-
-  position: relative;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  display: block;        
-  line-height: 20px;
-  text-align: left;
-  font-size: 20pt;
-  font-weight: bold;
-  text-decoration: none;
-  transition: ease all 0.3s;
-  position: fixed;
-  left: 1%;
-  bottom:12%;
-}
-.fabtn:hover{background: #26a74a}
 
 .green-bg{
  background-image: url('Image/footer green.jpg');
 
 }
-
