--- a/Angkring/style-allmenu.css
+++ b/Angkring/style-allmenu.css
@@ -1,14 +1,19 @@
-.body{
+@import url("https://fonts.googleapis.com/css?family=Hind:400,700");
+body{
+  font-family: 'Hind', sans-serif;
     overflow-x:hidden;
     background-image: url('Image/bg-food.png');
+    
+    width: 100%;
+    height: 100%;
 }
 
 .sidenav {
-  height: 75%; /* 100% Full-height */
+  height: 100%; /* 100% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1234902; /* Stay on top */
-  top: 10%; /* Stay at the top */
+  top: 0%; /* Stay at the top */
   right: 0;
   background-color:   rgba(230, 230, 230, 0.9); 
   overflow-x: hidden; /* Disable horizontal scroll */
@@ -18,7 +23,7 @@
 
 .sidenav img{
   object-fit: cover;
-  height: 7.17rem;
+  height: 8rem;
   width: 7rem;
 }
 
@@ -46,15 +51,23 @@
   margin-left: 50px;
 }
 
+.input-group{
+  width: 7rem;
+  position: sticky;
+  right: 0;
+}
+
+
 .sidenav .checkbtn {
   position: absolute;
-  top: 100%;
+  /* top: 100%; */
+  bottom: 5%;
   right: 25px;
 }
 
 
 .talkbubble {
-    width: 11rem;
+    width: 20rem;
     height: 3rem;
     background:rgba(156, 238, 101,0.5);
     position: relative;
@@ -159,21 +172,23 @@
 
   .greet-text{
     position: relative;
-    display: block;
     width: 20rem;
-    margin-left: -10rem;        
+    margin-left: -10rem;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    display: block;        
     line-height: 20px;
     text-align: center;
     font-size: 20pt;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
     text-decoration: none;
     transition: ease all 0.3s;
     position: fixed;
-    top: 1%;
-    left: 50%;
+    top: 2%;
+    left:50%;
     -webkit-animation-delay: 0.3s;
     animation-delay: 0.3s;
-    z-index: 9999999;
   }
 
   .fabtn{
@@ -195,3 +210,4 @@
     bottom:2%;
   }
 /* .fabtn:hover{background: #26a74a} */
+
