--- a/Angkring/style-checkout.css
+++ b/Angkring/style-checkout.css
@@ -7,7 +7,7 @@ html, body {
   background-size: cover;
   width: 100%;
   height: 100%;
-  overflow-x: hidden ;
+  
   overflow-y:visible !important;
 }
 
@@ -33,14 +33,8 @@ html, body {
   float: none; 
 } 
 
-::-webkit-scrollbar {
-    width: 0px;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
-}
-/* Optional: show position indicator in red */
-::-webkit-scrollbar-thumb {
-    background: rgba(192, 192, 192, 0.3);    
-}
+
+
 
 .mx-6{
   margin-left: -0.5rem;
@@ -235,4 +229,60 @@ html, body {
 .green-bg{
  background-image: url('Image/footer green.jpg');
 
+}
+
+/* =============================BELOW ARE THE NEW ONE======================================== */
+
+.input-group{
+  width: 7rem;
+  position: sticky;
+  right: 0;
+  bottom: 0;
+}
+
+@-webkit-keyframes load {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes load {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+
+
+#overlay {
+  position: absolute;
+  left: 0;
+  top: -10rem;
+  bottom: 0;
+  right: 0;
+  width: 1368px;
+  height: 1000px;
+  background: #000;
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+  z-index: 2490274534;
+  -webkit-animation-name: load;
+  animation-name: load;
+}
+#loading {
+  width: 10rem;
+  height: auto;
+  position: absolute;
+  top: 30rem;
+  left: 50%;
+  margin-left: -5rem;
+  z-index: 2490274590;
 }
