--- a/Angkring/sytle.css
+++ b/Angkring/sytle.css
@@ -86,6 +86,7 @@ body, html, .bg {
 
 .carousel-indicators{
     padding-left: 20px;
+    bottom: 3%;
 }
 
 .carousel-indicators li {
@@ -127,8 +128,8 @@ body, html, .bg {
  }
 
  .modal-body {
-    padding:9px 4px;
-    border-bottom:1px solid #eee;
+    padding:0px 0px;
+    border-bottom:0px solid #eee;
     background-color: rgb(255, 255, 255,0.8);
 
      border-bottom-left-radius: 1px;
